--- a/config/templates/base.html
+++ b/config/templates/base.html
@@ -230,7 +230,7 @@
       <script src="{% static 'js/form.js' %}"></script>
     </section>
 
-    <footer class="section footer-classic">
+    <footer class="section footer-classic" id='contacts'>
       <div class="container text-center text-lg-left">
         <div class="column jc-sa">
           <div class="row jc-sa kontakti">
